--- a/assets/buydo/buydo-style.css
+++ b/assets/buydo/buydo-style.css
@@ -7,3 +7,9 @@
 	padding-top: 20px;
 	border-bottom: 1px solid #ECEBEB;
 }
+
+.product-page-blockt {
+	border-bottom: 1px solid #f4f4f4;
+	padding-bottom: 20px;
+	margin-bottom: 18px;
+}
