--- a/assets/buydo/buydo-style.css
+++ b/assets/buydo/buydo-style.css
@@ -13,3 +13,21 @@
 	padding-bottom: 20px;
 	margin-bottom: 18px;
 }
+
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /*margin: 0 0 100px;*/
+    /* bottom = footer height */
+    /*padding: 25px;*/
+}
+.footer {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    /*height: 100px;*/
+    width: 100%;
+    overflow:hidden;
+}
